# Retail_Predict_Forecast

./: Makefile  README.md  github.txt  pyproject.toml  requirements.txt
Retail_Predict_Forecast/: __init__.py  dataset.py  features.py  plots.py
Retail_Predict_Forecast/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/Forecasting/: Prof_model.joblib  Prof_model1.joblib
models/Predictive/: sgd_pipeline.joblib  xgb_pipeline.joblib
notebooks/: SamyappanNallamuthu_Paiynthalir-24715435-DataPreparation.ipynb
notebooks/Forecasting/: SamyappanNallamuthu_Paiynthalir-24715435-AutoARIMA.ipynb  SamyappanNallamuthu_Paiynthalir-24715435-Prophet.ipynb
notebooks/Predictive/: SamyappanNallamuthu_Paiynthalir-24715435-XGBoost.ipynb  SamyappanNallamuthu_Paiynthalir-24715435-datasplitForPredictiveModels.ipynb  SamyappanNallamuthu_Paiynthalir-24715435-sgdRegression-timesplit.ipynb  SamyappanNallamuthu_Paiynthalir-24715435-sgdRegression.ipynb
