[tool.poetry]
name = "retail-predict-forecast"
version = "0.1.0"
description = ""
authors = ["Pine Nallamuthu <paiynthalir.samyappannallamuthu@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
matplotlib = "^3.9.2"
altair = "^5.4.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.3"
pandas = "1.5.3"
numpy = "1.23.2"
prophet = "1.1.5"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
